--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
             <div class="Presentation text-center border p-2">¡Hola 👋!
 
                 Soy un joven emprendedor apasionado por la Creación especialmente en la tegnologia, y en esta ocacion me presento como Creador de
-                 <b>Cartas Virtuales</b> y  <b>Sitios Web</b>. Mi objetivo es ayudar a restaurantes y negocios a tener una <i>presencia</i> en línea atractiva y funcional.
+                 <b>Cartas Virtuales</b> y  <b>Sitios Web</b> <code> si tienes algun proyecto en mente puedes contactarme</code>. Mi objetivo es ayudar a restaurantes y negocios a tener una <i>presencia</i> en línea atractiva y funcional.
                 <br><br>
                 <h4>¿Por qué elegirme?</h4>
                 <br>
