--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
         <h3 class="fs-1">Contacto</h3>
         <div class=" col-12 col-md-10 img2">
             <div class="redes">
-                <a href="https://www.instagram.com/unprogramayyo/" target="_blank">
+                <a href="https://www.instagram.com/user17job/" target="_blank">
                     <div class="social">Instagram</div>
                 </a>
                 <a href="https://www.linkedin.com/in/user17job/" target="_blank">
